--- a/ThirdPersonCamera/ThirdPersonCamera.csproj
+++ b/ThirdPersonCamera/ThirdPersonCamera.csproj
@@ -295,9 +295,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DreamWorldManager.cs" />
+    <Compile Include="Main.cs" />
     <Compile Include="ThirdPersonCamera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ThirdPersonCameraPatch.cs" />
+    <Compile Include="Patches.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="default-config.json" />
