--- a/ThirdPersonCamera/ThirdPersonCamera.csproj
+++ b/ThirdPersonCamera/ThirdPersonCamera.csproj
@@ -296,6 +296,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
+    <Compile Include="ScreenText.cs" />
     <Compile Include="ThirdPersonCamera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Patches.cs" />
