--- a/ThirdPersonCamera/ThirdPersonCamera.csproj
+++ b/ThirdPersonCamera/ThirdPersonCamera.csproj
@@ -295,11 +295,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HUDHandler.cs" />
     <Compile Include="Main.cs" />
-    <Compile Include="ScreenText.cs" />
+    <Compile Include="PlayerMeshHandler.cs" />
+    <Compile Include="ScreenTextHandler.cs" />
     <Compile Include="ThirdPersonCamera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Patches.cs" />
+    <Compile Include="ToolMaterialHandler.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="default-config.json" />
