--- a/ThirdPersonCamera/ThirdPersonCamera.csproj
+++ b/ThirdPersonCamera/ThirdPersonCamera.csproj
@@ -298,7 +298,7 @@
     <Compile Include="HUDHandler.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="PlayerMeshHandler.cs" />
-    <Compile Include="ScreenTextHandler.cs" />
+    <Compile Include="UIHandler.cs" />
     <Compile Include="ThirdPersonCamera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Patches.cs" />
