--- a/ThirdPersonCamera/default-config.json
+++ b/ThirdPersonCamera/default-config.json
@@ -1,6 +1,7 @@
 {
   "enabled": true,
   "settings": {
-    "Keep free look angle": false
+    "Keep free look angle": false,
+    "Use 3rd person by default": true
   }
 }
