--- a/ThirdPersonCamera/ThirdPersonCamera.csproj
+++ b/ThirdPersonCamera/ThirdPersonCamera.csproj
@@ -315,10 +315,12 @@
     <PostBuildEvent>
             rmdir /s /q "$(OwmlDir)\Mods\$(ModUniqueName)"
             md "$(OwmlDir)\Mods\$(ModUniqueName)"
+            md "$(OwmlDir)\Mods\$(ModUniqueName)\assets"
 
             copy /y "$(TargetPath)" "$(OwmlDir)\Mods\$(ModUniqueName)"
             copy /y "$(ProjectDir)\default-config.json" "$(OwmlDir)\Mods\$(ModUniqueName)"
             copy /y "$(ProjectDir)\manifest.json" "$(OwmlDir)\Mods\$(ModUniqueName)"
+            copy /y "$(ProjectDir)\assets" "$(OwmlDir)\Mods\$(ModUniqueName)\assets"
         </PostBuildEvent>
   </PropertyGroup>
 </Project>
