--- a/ThirdPersonCamera/default-config.json
+++ b/ThirdPersonCamera/default-config.json
@@ -2,6 +2,7 @@
   "enabled": true,
   "settings": {
     "Keep free look angle": false,
-    "Use 3rd person by default": true
+    "Use 3rd person by default": true,
+    "Use custom dreamer model": true
   }
 }
