--- a/ThirdPersonCamera/default-config.json
+++ b/ThirdPersonCamera/default-config.json
@@ -3,6 +3,24 @@
   "settings": {
     "Keep free look angle": false,
     "Use 3rd person by default": true,
+    "Default camera zoom (no suit)": {
+      "type": "slider",
+      "value": "0.3",
+      "min": 0,
+      "max": 1
+    },
+    "Default camera zoom (suit)": {
+      "type": "slider",
+      "value": "0.3",
+      "min": 0,
+      "max": 1
+    },
+    "Default camera zoom (ship)": {
+      "type": "slider",
+      "value": "0.3",
+      "min": 0,
+      "max": 1
+    },
     "Use custom dreamer model": true
   }
 }
