--- a/ThirdPersonCamera/manifest.json
+++ b/ThirdPersonCamera/manifest.json
@@ -3,6 +3,7 @@
   "author": "xen",
   "name": "Third Person Camera",
   "uniqueName": "xen.ThirdPersonCamera",
-  "version": "1.2.3",
-  "owmlVersion": "2.2.0"
+  "version": "2.0.0",
+  "owmlVersion": "2.2.0",
+  "dependencies": [ "xen.CommonCameraUtility" ]
 }
