--- a/ThirdPersonCamera/ThirdPersonCamera.csproj
+++ b/ThirdPersonCamera/ThirdPersonCamera.csproj
@@ -27,4 +27,7 @@
   <ItemGroup>
     <Content Include="ThirdPersonCamera.csproj.user" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Patches\" />
+  </ItemGroup>
 </Project>
