--- a/ThirdPersonCamera/ThirdPersonCamera.csproj
+++ b/ThirdPersonCamera/ThirdPersonCamera.csproj
@@ -1,33 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
-    <LangVersion>default</LangVersion>
-    <Copyright>Copyright © 2020</Copyright>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
-    <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-    <DebugType>none</DebugType>
-  </PropertyGroup>
-  <ItemGroup>
-	<PackageReference Include="HarmonyX" Version="2.10.0" />
-    <PackageReference Include="OWML" Version="2.3.2" />
-    <PackageReference Include="OuterWildsGameLibs" Version="1.1.12.168" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="default-config.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="manifest.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="ThirdPersonCamera.csproj.user" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Patches\" />
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>net48</TargetFramework>
+		<LangVersion>default</LangVersion>
+		<Copyright>Copyright © 2020</Copyright>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+		<CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+		<DebugType>none</DebugType>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="HarmonyX" Version="2.10.0" />
+		<PackageReference Include="OWML" Version="2.3.2" />
+		<PackageReference Include="OuterWildsGameLibs" Version="1.1.12.168" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="default-config.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Include="manifest.json">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
+		<None Include="assets/**">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+	<ItemGroup>
+		<Content Include="ThirdPersonCamera.csproj.user" />
+	</ItemGroup>
+	<ItemGroup>
+		<Folder Include="assets\" />
+	</ItemGroup>
 </Project>
