--- a/ThirdPersonCamera/manifest.json
+++ b/ThirdPersonCamera/manifest.json
@@ -4,7 +4,8 @@
   "author": "xen",
   "name": "Third Person Camera",
   "uniqueName": "xen.ThirdPersonCamera",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "owmlVersion": "2.9.8",
-  "dependencies": [ "xen.CommonCameraUtility" ]
+  "dependencies": [ "xen.CommonCameraUtility" ],
+  "donateLink": "https://www.patreon.com/xen42"
 }
